add user population script + fix http response + solution diagrams

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,6 @@ server:
       include-binding-errors: always
       include-stacktrace: never
       include-exception: false
+spring:
+  jpa:
+    defer-datasource-initialization: true
